# FastApiTemplate

./: .gitignore  CLAUDE.md  Makefile  README.md  UncleJob.txt  commands.txt  container_config.json  dev.template.env  pyproject.toml  requirements.txt
.claude/agents/: architect.md  dev.md  lead.md  tester.md
.claude/rules/: architecture.md  style.md  testing.md
.github/workflows/: ci_dev.yml
backend/: app.py  container.py  container_config.json
backend/app_one/: tasks.py
backend/auctions/: __init__.py  container.py  models.py  repository.py  tasks.py  unit_of_work.py
backend/auctions/api/: create_auction.py  endpoints.py  router.py  validators.py
backend/auctions/models/: __init__.py  auction.py
backend/auctions/selectors/: get_all_auctions.py
backend/auctions/services/: auctions.py  create_auction.py
backend/config/: __init__.py  celery.py  celery_beat.py  config.py  container.py  logging.py
backend/shared/: __init__.py  cache.py  database.py  db_session.py  exceptions.py  logger.py  sqlalchemy_repository.py  utils.py
backend/shared/interfaces/: cache.py  logger.py  repository.py  unit_of_work.py
backend/tests/: conftest.py  mocks.py
backend/users/: __init__.py  exceptions.py  models.py  repository.py  tasks.py  utils.py
backend/users/api/: endpoints.py  serializers.py  validator.py
backend/users/services/: auth.py  users.py
docker/: docker-compose.dev.yml  docker-entrypoint.sh
docker/db/: dev.Dockerfile  init_db.sh
docker/fastapi/: dev.Dockerfile
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: mothers.py
(+6 files in other folders)
